[package]
name = "frenchinesea"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = "0.6.3"
dioxus-web = "0.6.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
